[tool.poetry]
name = "scrapeless-fashionphile"
version = "0.1.0"
description = "Example Fashionphile scraper using the official Scrapeless Python SDK + Playwright over CDP"
authors = ["Scrapeless <hello@scrapeless.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
scrapeless = "^1.2"
python-dotenv = "^1.0"
playwright = "^1.47"
parsel = "^1.9"
loguru = "^0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-rerunfailures = "^14.0"
cerberus = "^1.3"
ruff = "^0.6"
black = "^24.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra"
python_files = "test.py"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
